test/arrays/ferguson/semantic-examples/pass-global.good
pass-global.chpl:8: error: unresolved call 'returnExistingArray()'
